<resources>
    <string name="app_name">countDown</string>
    <string name="reset">RESET</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="start">START</string>
    <string name="colon">:</string>
    <string name="_00">00</string>
    <string name="_000">000</string>
    <string name="enter_the_time">Enter the time</string>
    <string name="hours">hours</string>
    <string name="mins">mins</string>
    <string name="secs">secs</string>
    <string name="ms">ms</string>
</resources>