<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_time"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:hint="@string/hours"
            android:textColorHint="@color/matteblack"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/et_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:hint="@string/mins"
            android:textColorHint="@color/matteblack"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/et_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:hint="@string/secs"
            android:textColorHint="@color/matteblack"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/et_milliseconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ms"
            android:textColorHint="@color/matteblack"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/white"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:backgroundTint="@color/blue"
        app:cornerRadius="8dp"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>