<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="32dp"
        >
        <EditText
            android:id="@+id/et_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="00"
            android:background="null"
            android:hint="@string/_00"
            android:textSize="48sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="48sp"/>
        <EditText
            android:id="@+id/et_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="00"
            android:background="null"
            android:hint="@string/_00"
            android:textSize="48sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="48sp"/>
        <EditText
            android:id="@+id/et_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="00"
            android:background="null"
            android:hint="@string/_00"
            android:textSize="48sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="48sp"/>
        <EditText
            android:id="@+id/et_milliseconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="00"
            android:background="null"
            android:hint="@string/_00"
            android:textSize="48sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:cornerRadius="8dp"
            android:layout_margin="16dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            app:cornerRadius="8dp"
            android:layout_margin="16dp"
            />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:cornerRadius="8dp"
        android:layout_margin="8dp"
        />

</LinearLayout>